--- a/init-config-example.yaml
+++ b/init-config-example.yaml
@@ -1,37 +1,40 @@
-# project location
+### Project location
 rewriteBase: /hubleto-erp/
 projectUrl: http://localhost/hubleto-erp
 srcUrl: http://localhost/hubleto-erp/vendor/hubleto/main
 assetsUrl: http://localhost/hubleto-erp/assets
 
-# database connection
+### Database connection
 dbHost: localhost
 dbUser: root
 dbPassword: ''
 dbName: hbl_erp
 dbCodepage: utf8mb4
 
-# initial account access
+### Initial account access
 accountFullName: Hubleto Erp
 adminName: ERP
 adminFamilyName: Hubleto
 adminNick: erp-hubleto
 adminEmail: erp-hubleto@example.com
 adminPassword: erp
+packagesToInstall: crm,marketing,sales,supply-chain,e-commerce,finance
 
-# miscellaneous
-generateDemoData: true
+### Miscellaneous
+generateDemoData: false
+noPrompt: false
 
-# Uncomment following lines if you want to have full control over
-# what apps will be installed. Example below installs minimal set
-# of apps.
-# packagesToInstall: no-package
+### Apps to be installed
+# Uncomment following lines if you want to have full control over what
+# apps will be installed. Example below installs minimal set of apps.
+# CAUTION: order of the apps is important
 # appsToInstall:
 #   HubletoApp\Community\Settings: []
 #   HubletoApp\Community\Tools: []
 #   HubletoApp\Community\Desktop: []
 #   HubletoApp\Community\Usage: []
 
+### Extra config parameters
 # Uncomment following lines if you want to customize look & feel
 # of your Hubleto
 # extraConfigEnv:
