--- a/init-config-example.yaml
+++ b/init-config-example.yaml
@@ -1,8 +1,8 @@
 ### Project location
-rewriteBase: /hubleto-erp/
-projectUrl: http://localhost/hubleto-erp
-srcUrl: http://localhost/hubleto-erp/vendor/hubleto/main
-assetsUrl: http://localhost/hubleto-erp/assets
+# rewriteBase: /hubleto-erp/
+# projectUrl: http://localhost/hubleto-erp
+# srcUrl: http://localhost/hubleto-erp/vendor/hubleto/main
+# assetsUrl: http://localhost/hubleto-erp/assets
 
 ### Database connection
 dbHost: localhost
@@ -21,8 +21,8 @@ adminPassword: erp
 packagesToInstall: crm,marketing,sales,supply-chain,e-commerce,finance
 
 ### Miscellaneous
-generateDemoData: false
-noPrompt: false
+generateDemoData: true
+noPrompt: true
 
 ### Apps to be installed
 # Uncomment following lines if you want to have full control over what
