added assets repository

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "hubleto/framework": "0.16.*",
         "hubleto/main": "0.16.*",
-        "hubleto/apps": "0.16.*"
+        "hubleto/apps": "0.16.*",
+        "hubleto/assets": "*"
     },
     "autoload": {
         "psr-4": {
