--- a/init-config-production.yaml
+++ b/init-config-production.yaml
@@ -29,10 +29,10 @@ noPrompt: true
 # apps will be installed. Example below installs minimal set of apps.
 # CAUTION: order of the apps is important
 # appsToInstall:
-#   HubletoApp\Community\Settings: []
-#   HubletoApp\Community\Tools: []
-#   HubletoApp\Community\Desktop: []
-#   HubletoApp\Community\Usage: []
+#   Hubleto\App\Community\Settings: []
+#   Hubleto\App\Community\Tools: []
+#   Hubleto\App\Community\Desktop: []
+#   Hubleto\App\Community\Usage: []
 
 ### Extra config parameters
 # Uncomment following lines if you want to customize look & feel
