--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "hubleto/framework": "0.17.*",
         "hubleto/erp": "0.17.*",
-        "hubleto/assets": "*"
+        "hubleto/assets": "0.17.*"
     },
     "autoload": {
         "psr-4": {
