--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hubleto/erp-project",
-    "version": "0.18",
+    "version": "0.19",
     "license": "AGPL-3.0-or-later",
     "description": "Production-ready Hubleto ERP.",
     "homepage": "https://www.hubleto.com",
@@ -10,11 +10,9 @@
     },
     "keywords": ["hubleto", "crm", "erp", "application", "hub"],
     "require": {
-        "hubleto/framework": "0.18.*",
-        "hubleto/erp": "0.18.*",
-        "hubleto/assets": "0.18.*",
-        "defuse/php-encryption": "2.*",
-        "ddeboer/imap": "1.*"
+        "hubleto/framework": "0.19.*",
+        "hubleto/erp": "0.19.*",
+        "hubleto/assets": "0.19.*"
     },
     "autoload": {
         "psr-4": {
