supply-chain group renamed to retail; added Shops app

--- a/init-config-dev.yaml
+++ b/init-config-dev.yaml
@@ -18,7 +18,7 @@ adminFamilyName: Hubleto
 adminNick: admin
 adminEmail: dev@example.com
 adminPassword: dev
-packagesToInstall: crm,marketing,sales,projects,supply-chain,e-commerce,finance,developer
+packagesToInstall: crm,marketing,sales,projects,retail,e-commerce,finance,developer
 
 ### Miscellaneous
 generateDemoData: true
